# bodega-wp

./: .editorconfig  .env.example  .gitignore  .tool-versions  0-START-HERE.md  CHANGELOG.md  CI.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMMIT_CONVENTION.md  CONTRIBUTING.md  LICENSE  MANUAL.md  Makefile  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TELEMETRY_OPT_IN.md  TROUBLESHOOTING.md  docker-compose.yml  index.md  insomnia_api_test.yaml  k6-api-test.js  mkdocs.yml  postman_collection.json  render.yaml  setup.ps1
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  stale.yml
.husky/: pre-commit
docs/: ._api  accessibility.md  architecture.md  deployment.md  editor.md  first-pr.md  index.md  license-attribution.md  mkdocs.md  onboarding.md  structure.md
mock-ui/: README.md  index.html  mock-ui.js  package.json  swagger-ui.html  vite.config.js
nodejs/: .eslintignore  .eslintrc.json  package-lock.json  package.json
obsidian/: 00 Index.md  README.md  dataview.md  dependencies.md
python/: .pre-commit-config.yaml  pyproject.toml  requirements.txt  tox.ini
python/src/: main.py
python/tests/: conftest.py  test_api.py  test_example.py  test_main.py
scripts/: build.sh  deploy.sh  format.sh  generate-readme.sh  mock-api.ps1  mock-api.sh  obsidian-export.sh  release.sh  setup-hooks.sh  setup.sh  start-api.ps1  stop-api.ps1  sync-docs.sh  sync_teams.py  test-api.ps1  test.sh  update-changelog.sh  validate-env.ps1  version-bump.sh
site/: 404.html  index.html
typescript/: .eslintignore  .eslintrc.json  package.json  (+2 more)
(+67 files in other folders)
