[project]
name = "github-project-template-python"
version = "0.1.0"
description = "Python backend for GITHUB PROJECT TEMPLATE."
readme = "../README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

[project.dependencies]
fastapi = "^0.95.2"
uvicorn = { extras = ["standard"], version = "^0.22.0" }

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=3.0",
  "black>=22.3",
  "flake8>=5.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
